--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
-                    <a class="nav-link" href="#">List</a>
+                    <a class="nav-link" href="{% url 'list' %}">Posts</a>
+                    <a class="nav-link" href="{% url 'new' %}">New Post</a>
                 </div>
             </div>
         </div>
