--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,4 +4,9 @@
 
 {% block content %}
 <h1>This is home</h1>
+{% if user.is_authenticated %}
+<p>Welcome to the home page "{{user.username}}"</p>
+{% else %}
+<p>Welcome to the home page, Guest! You are not logged in.</p>
+{% endif %}
 {% endblock content %}
