--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
 
-{% block title %}Post{% endblock title %}
+{% block title %}List{% endblock title %}
 
 {% block content %}
-<h1>Post</h1>
-<p>
-<ul>
-    {% for post in post_list %}
-    <a href="{ url 'detail' post.id}">
-        <li>{{post.title}}</li>
-    </a>
-    {% endfor %}
-</ul>
-</p>
+<h1>Posts</h1>
+{% for post in post_list %}
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">{{ post.title }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ post.subtitle }}</h6>
+        <p class="card-text">{{ post.body | truncatechars:500}}</p>
+        <a href="{% url 'detail' post.id%}" class="card-link">Read more</a>
+        <a href="{% url 'edit' post.id%}" class="card-link">Edit</a>
+    </div>
+</div>
+<br />
+{% endfor %}
 {% endblock content %}
